--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Inloggning</h1>
-    <form action="inlogning.php" method="post">
-      Name: <input type="text" name="username" /><br />
-      Password: <input type="password" name="password" /><br />
-      <input type="submit" value="Logga in" />
-    </form>
+    <div id="login-form">
+      <h1>Logga in</h1>
+      <form action="inlogning.php" method="post">
+        Name: <input type="text" name="username" /><br />
+        Password: <input type="password" name="password" /><br />
+        <input type="submit" value="Logga in" />
+      </form>
+    </div>
+    <h1>Skapa konto</h1>
   </body>
 </html>
