--- a/index.html
+++ b/index.html
@@ -4,17 +4,82 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        background-color: #f0f0f0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .form {
+        background-color: #fff;
+        padding: 20px;
+        margin: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+
+      h1 {
+        text-align: center;
+      }
+
+      form {
+        text-align: center;
+      }
+
+      input[type="text"],
+      input[type="password"],
+      input[type="email"] {
+        width: calc(100% - 22px);
+        padding: 10px;
+        margin: 10px 0;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        box-sizing: border-box;
+      }
+
+      input[type="submit"] {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        border: none;
+        border-radius: 5px;
+        background-color: #007bff;
+        color: #fff;
+        cursor: pointer;
+      }
+
+      input[type="submit"]:hover {
+        background-color: #0056b3;
+      }
+    </style>
   </head>
   <body>
-    <div id="login-form">
-      <h1>Logga in</h1>
-      <form action="inlogning.php" method="post">
-        Name: <input type="text" name="username" /><br />
-        Password: <input type="password" name="password" /><br />
-        <input type="submit" value="Logga in" />
-      </form>
+    <div id="container">
+      <div id="login-form" class="form">
+        <h1>Logga in</h1>
+        <form action="inlogning.php" method="post">
+          Username: <input type="text" name="username" /><br />
+          Password: <input type="password" name="password" /><br />
+          <input type="submit" value="Logga in" />
+        </form>
+      </div>
+
+      <div id="signup-form" class="form">
+        <h1>Skapa konto</h1>
+        <form action="create.php" method="post">
+          Fullname: <input type="text" name="fullname" /> <br />
+          Email: <input type="text" name="email" /> <br />
+          Username: <input type="text" name="username" /><br />
+          Password: <input type="password" name="password" /><br />
+          <input type="submit" value="Skapa" />
+        </form>
+      </div>
     </div>
-    <h1>Skapa konto</h1>
   </body>
 </html>
