--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="style.css" /> -->
-    <style>
+    <link rel="stylesheet" href="style.css" />
+    <!-- <style>
       body {
         margin: 0;
         padding: 0;
@@ -57,7 +57,7 @@
       input[type="submit"]:hover {
         background-color: #0056b3;
       }
-    </style>
+    </style> -->
   </head>
   <body>
     <div id="container">
